【调整】model 管理方式
