# internal/server/router/pixiv/model.go
@@ -1,8 +1,4 @@
-package model
-
-type PixivErr struct {
-	Detail string `json:"detail"`
-}
+package pixiv
 
 type ImageInDB struct {
 	Id           int
