# internal/server/router/pixiv/pixiv.go
@@ -4,7 +4,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"net/http"
 	"net/url"
-	"neutron-star-api/internal/server/router/pixiv/model"
+	"neutron-star-api/internal/server/model"
 	"neutron-star-api/third_party/loliconapi"
 )
 
@@ -17,20 +17,20 @@ func LoadHandler(e *gin.Engine) {
 // @Tags         pixiv
 // @Accept       json
 // @Produce      json
-// @Param        params  query  model.GetParams true "params"
-// @Success      200  {object}  model.ImageInDB
-// @Failure      400  {object}  model.PixivErr
-// @Failure      500  {object}  model.PixivErr
+// @Param        params  query  pixiv.GetParams true "params"
+// @Success      200  {object}  pixiv.ImageInDB
+// @Failure      400  {object}  model.Err
+// @Failure      500  {object}  model.Err
 // @Router       /pixiv [get]
 func get(c *gin.Context) {
-	var params model.GetParams
+	var params GetParams
 	if err := c.ShouldBindQuery(&params); err != nil {
-		c.JSON(http.StatusBadRequest, model.PixivErr{Detail: err.Error()})
+		c.JSON(http.StatusBadRequest, model.Err{Detail: err.Error()})
 		return
 	}
 	data, err := loliconapi.GetPixivImages(params.Num)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, model.PixivErr{Detail: err.Error()})
+		c.JSON(http.StatusBadRequest, model.Err{Detail: err.Error()})
 		return
 	}
 	var imgUrls []string
